# MAP-Controller

./: README.md
F110_ROS_Simulator/: README.md  params.yaml
F110_ROS_Simulator/launch/: simulator.rviz
F110_ROS_Simulator/maps/berlin/: berlin.yaml
F110_ROS_Simulator/maps/hangar/: global_wpnts.bag  hangar.yaml
F110_ROS_Simulator/maps/overtake_map/: overtake_map.yaml
F110_ROS_Simulator/maps/porto/: porto.yaml
F110_ROS_Simulator/node/: simulator.cpp
F110_ROS_Simulator/src/: st_kinematics.cpp
f110_msgs/: CMakeLists.txt
map_controller/: CMakeLists.txt  package.xml
map_controller/cfg/: map_params.yaml  pp_params.yaml
map_controller/launch/: sim_MAP.launch  sim_PP.launch
map_controller/src/: MAP_controller.py  PP_controller.py  time_error_tracker.py
steering_lookup/: CMakeLists.txt  package.xml
steering_lookup/src/LUT_Generation/: simulate_model.py
steering_lookup/src/LUT_Generation/dynamics/: vehicle_dynamics_st.py  vehicle_dynamics_stown.py
steering_lookup/src/LUT_Generation/helpers/: dotdict.py  load_model.py
steering_lookup/src/LUT_Generation/models/NUC4/: NUC4_pacejka.txt  NUC4_pacejka_lookup_table.csv
steering_lookup/src/LUT_Generation/models/SIM/: SIM_linear.txt  SIM_linear_lookup_table.csv
steering_lookup/src/steering_lookup/: lookup_steer_angle.py
